# Raytracer

./: .gitignore  CMakeLists.txt  README.md  bowling.cfg  cluster.cfg  install_dependencies.sh  scene.cfg  tmpscene.cfg
bonus/: .gitignore  CMakeLists.txt
bonus/src/: main.cpp
bonus/src/Prog/Camera/: Camera.cpp
bonus/src/Prog/Camera/Screen/: Screen.hpp
bonus/src/Prog/Materials/Lambertian/: Lambertian.hpp
bonus/src/Prog/Materials/Normal/: Normal.cpp
bonus/src/Prog/Scene/: Scene.hpp
bonus/src/Prog/Shapes/: IShape.hpp
bonus/src/Prog/Utils/: Ray.cpp  Vec3.cpp  Vec3.hpp
bonus/src/Viewer/: ImagePpm.cpp
config/: cornell_box.cfg  my.cfg  other.cfg  scene.cfg  skybox.cfg  temp.cfg  thomas.cfg  tmp.cfg
plugins/materials/plastic/: CMakeLists.txt
plugins/materials/plastic/src/: Plastic.cpp  Plastic.hpp
plugins/materials/reflective/: CMakeLists.txt
plugins/materials/reflective/src/: Reflective.cpp  Reflective.hpp
plugins/shapes/lCone/: CMakeLists.txt
plugins/shapes/lCone/src/: lCone.cpp  lCone.hpp
plugins/shapes/lCylinder/: CMakeLists.txt
plugins/shapes/lCylinder/src/: lCylinder.cpp  lCylinder.hpp
scene/: AmbientOcclusion.cfg  Cone.cfg  Cylinder.cfg  Earth.cfg  LConeLCylinder.cfg  PhongReflectionModel.cfg  RefractTransparentDammier.cfg  RefractTransparentDammier_.cfg  directionalRotation.cfg  fovCastShadow.cfg  fovCastShadowPoint.cfg  fovDir.cfg  multipleDir.cfg  multiplePointColored.cfg  objScaleTrianglesSpacePartitioning.cfg  reflectionSpherePlan.cfg  reflectionSpherePlanNormalTexture.cfg  sceneInScene.cfg  translationAmbientFlatColor.cfg
src/: main.cpp  tmpscene.cfg
src/Camera/: Camera.cpp  Camera.hpp
src/Graphics/: Button.cpp  Button.hpp  CMakeLists.txt  ClusterWindow.cpp  ClusterWindow.hpp  ImagePpm.cpp  ImagePpm.hpp  MainWindow.cpp  MainWindow.hpp  ThreadWindow.hpp  main.cpp
src/Graphics/Button/: Button.cpp  Button.hpp
src/Graphics/ClusterWindow/: ClusterWindow.cpp  ClusterWindow.hpp
src/Graphics/Download/: Download.cpp  Download.hpp
src/Graphics/ImagePpm/: ImagePpm.cpp  ImagePpm.hpp
src/Graphics/Input/: Input.cpp  Input.hpp
src/Graphics/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/Graphics/Raytracer/: Raytracer.cpp  Raytracer.hpp
src/Graphics/ThreadWindow/: ThreadWindow.cpp  ThreadWindow.hpp
src/Lights/: ILight.hpp
src/Lights/DirLight/: DirLight.cpp
src/Lights/PointLight/: PointLight.cpp
src/Materials/Plastic/: Plastic.cpp
src/Prog/: CMakeLists.txt  main.cpp
src/Prog/Camera/: Camera.cpp  Camera.hpp  CameraBuilder.cpp  CameraBuilder.hpp
src/Prog/Camera/Screen/: Screen.hpp
src/Prog/Exceptions/: Exception.hpp
src/Prog/Factories/: AFactory.cpp  AFactory.hpp  IFactory.hpp
src/Prog/Factories/Light/: LightFactory.cpp  LightFactory.hpp
src/Prog/Factories/Material/: MaterialFactory.cpp  MaterialFactory.hpp
src/Prog/Factories/Shape/: ShapeFactory.cpp  ShapeFactory.hpp
src/Prog/ITexture/: ITexture.hpp
src/Prog/ITexture/Dammier/: Dammier.cpp  Dammier.hpp
src/Prog/ITexture/Image/: Image.cpp  Image.hpp
src/Prog/Lights/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp
src/Prog/Lights/DirLight/: DirLight.cpp  DirLight.hpp
src/Prog/Lights/PointLight/: PointLight.cpp  PointLight.hpp
src/Prog/Materials/: IMaterial.hpp
src/Prog/Materials/Emitive/: Emitive.cpp  Emitive.hpp
src/Prog/Materials/Glass/: Glass.cpp  Glass.hpp
src/Prog/Materials/Lambertian/: Lambertian.cpp  Lambertian.hpp
src/Prog/Materials/Normal/: Normal.cpp  Normal.hpp
src/Prog/Materials/Plastic/: Plastic.cpp  Plastic.hpp
src/Prog/Materials/Reflective/: Reflective.cpp  Reflective.hpp
src/Prog/Materials/Refractive/: Refractive.cpp  Refractive.hpp
src/Prog/Materials/Transparent/: Transparent.cpp  Transparent.hpp
src/Prog/Network/: Client.cpp  Client.hpp  Server.cpp  Server.hpp
src/Prog/Network/Client/: Client.cpp  Client.hpp  ClientParser.cpp  ClientParser.hpp
src/Prog/Network/Network/: Network.cpp  Network.hpp
src/Prog/Network/Server/: Server.cpp  Server.hpp
src/Prog/Parser/: Parser.cpp  Parser.hpp
src/Prog/Raytracer/: Raytracer.cpp  Raytracer.hpp  Settings.hpp
src/Prog/Scene/: Scene.cpp  Scene.hpp  SceneBuilder.cpp  SceneBuilder.hpp
src/Prog/Settings/: Settings.hpp
src/Prog/Shapes/: AShape.cpp  AShape.hpp  IShape.hpp
src/Prog/Shapes/AABB/: AABB.cpp  AABB.hpp
src/Prog/Shapes/BVH/: BVH.cpp  BVH.hpp
src/Prog/Shapes/Cone/: Cone.cpp  Cone.hpp
src/Prog/Shapes/Cylinder/: Cylinder.cpp  Cylinder.hpp
src/Prog/Shapes/Plan/: Plan.cpp  Plan.hpp
src/Prog/Shapes/Quad/: Quad.cpp  Quad.hpp
src/Prog/Shapes/Sphere/: Sphere.cpp  Sphere.hpp
src/Prog/Shapes/Triangle/: Triangle.cpp  Triangle.hpp
src/Prog/Shapes/lCone/: lCone.cpp
src/Prog/Shapes/lCylinder/: lCylinder.cpp  lCylinder.hpp
src/Prog/Utils/: CustomRandom.cpp  CustomRandom.hpp  FromString.hpp  GarbageCollector.cpp  GarbageCollector.hpp  HitRecord.hpp  LDLoader.hpp  ParsingUtils.cpp  ParsingUtils.hpp  Quaternion.hpp  Ray.hpp  Vec3.cpp  Vec3.hpp
src/Raytracer/: Raytracer.cpp  Raytracer.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Shapes/: IShape.hpp
src/Shapes/Sphere/: Sphere.cpp  Sphere.hpp
src/Utils/: Ray.cpp  Ray.hpp  Vec3.cpp  Vec3.hpp  Vector3.cpp  Vector3.hpp
src/Viewer/: CMakeLists.txt  ImagePpm.cpp  ImagePpm.hpp  ViewerPpm.cpp  ViewerPpm.hpp  main.cpp
